<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.vinilos.ui.viewmodels.AlbumViewModel" />
        <variable
            name="album"
            type="com.example.vinilos.data.models.Album" />
    </data>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnAlbumDetailBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/back_album"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAlbumDetailHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/albums_bottom_nav"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/btnAlbumDetailBack"
                app:layout_constraintBottom_toBottomOf="@id/btnAlbumDetailBack"
                app:layout_constraintStart_toEndOf="@id/btnAlbumDetailBack" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailHeaderTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/ivAlbumDetailCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover_image"
                    android:src="@drawable/album_placeholder"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAlbumDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/cardview"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@{album.name}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArtistList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvDateAndGenre"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvDateAndGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/hint_text"
                android:textSize="12sp"
                android:layout_marginHorizontal="16dp"
                android:text="@{viewModel.formatDateAndGenre(album.releaseDate, album.genre)}"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/rvArtistList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracksList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvDateAndGenre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvAlbumDetailDescription"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/tvAlbumDetailDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:textColor="@color/color_text"
                android:textSize="14sp"
                android:layout_marginHorizontal="16dp"
                android:text="@{album.description}"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@id/rvTracksList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/comments_title"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <FrameLayout
                android:id="@+id/flComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvComments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/editTextParagraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="88dp"
                    android:autofillHints=""
                    android:background="@drawable/comment_textfield_background"
                    android:gravity="top|start"
                    android:hint="@string/comments_hinttext"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:maxLength="500"
                    android:padding="16dp"
                    android:paddingBottom="32dp"
                    android:textColor="@color/color_text"
                    android:textColorHint="@color/hint_text"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_regular" />

                <TextView
                    android:id="@+id/charCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp"
                    android:text="@string/char_counter_default"
                    android:textColor="@color/hint_text"
                    android:textSize="11sp"
                    android:fontFamily="@font/poppins_regular" />
            </FrameLayout>

            <TextView
                android:id="@+id/labelRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/comments_score"
                android:textColor="@color/color_text"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/flComment"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/labelRating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/publishButton"
                android:text="@string/publish_button_text"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                style="@style/CustomButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/spinnerRating"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCommentsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/publishButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
