<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dialog"
        android:fontFamily="@font/poppins_bold"
        android:textSize="12sp"
        android:textColor="@color/color_text"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_gravity="end"/>
</LinearLayout>